--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
             - name: 🏗️ Build Website
               run: npm run build
 
-            - name: 📝 Set OHV credentials
-              uses: pitscher/ovh-deploy-hosting-action@v1
-              env:
-                OVH_HOSTING_USER: ${{ secrets.SSH_USERNAME }}
-                OVH_HOSTING_PASSWORD: ${{ secrets.SSH_KEY }}
-                OVH_HOSTING_DOMAIN: 192.168.1.151
-                REPOSITORY_NAME: rust-handler
-                REPOSITORY_URL: https://github.com/PGaillot/rust-handler
+            - name: 📝 Deploy
+              uses: appleboy/ssh-action@v0.1.10
+              with:
+                host: 192.168.1.151
+                username: ${{ secrets.SSH_USERNAME }}
+                password: ${{ secrets.SSH_KEY }}
+                port: 22
+                script: 'cd /var/www/rust-handler && sudo git checkout main && sudo git pull'
