--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
                 host: 192.168.1.151
                 username: ${{ secrets.SSH_USERNAME }}
                 password: ${{ secrets.SSH_KEY }}
-                port: 22
-                source: "../../../dist/rust-handlere/"
+                port: 80
+                source: "./dist/rust-handlere/"
                 target: "/var/www/rust-handler"
                 strip_components: 3 # this is important
