--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
 
