--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs: 
     build:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04
         steps:
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
             - uses: actions/checkout@v2
