--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
                 username: ${{ secrets.SSH_USERNAME }}
                 password: ${{ secrets.SSH_KEY }}
                 port: 80
-                source: "../dist/rust-handlere/*"
-                target: "./var/www/rust-handler"
-                strip_components: 3 # this is important
+                source: "dist/rust-handlere/*"
+                target: "/var/www/rust-handler"
+                strip_components: 1 # this is important
