--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,13 @@ jobs:
               run: npm run build
 
             - name: 📝 Deploy
-              uses: SamKirkland/FTP-Deploy-Action@3.1.1
-              with:
-                ftp-server: 192.168.1.151
-                ftp-username: ${{ secrets.SSH_USERNAME }}
-                ftp-password: ${{ secrets.SSH_KEY }}
+              uses: appleboy/scp-action@master
+              env:
+                HOST: 192.168.1.151
+                USERNAME: ${{ secrets.SSH_USERNAME }}
+                PORT: 22
+                PASSWORD: ${{ secrets.SSH_KEY }}
                 source: "dist/rust-handlere/*"
+              with:
                 target: "/var/www/rust-handler"
                 strip_components: 1 # this is important
