--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
               run: npm run build
 
             - name: 📝 Deploy
-              uses: appleboy/scp-action@v0.1.7
+              uses: appleboy/scp-action@master
               with:
                 host: 192.168.1.151
                 username: ${{ secrets.SSH_USERNAME }}
