--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,12 @@ jobs:
             - name: 🏗️ Build Website
               run: npm run build
 
-            - name: 📝 Deploy
-              uses: JamesIves/github-pages-deploy-action@v4
+            - name: Install SSH Key
+              uses: shimataro/ssh-key-action@v2
               with:
-                  folder: "./dist/rust-handler" # The folder the action should deploy.
-                  ssh-key: ${{ secrets.SSH_KEY }}
-    
+                  key: ${{ secrets.SSH_KEY }}
+                  known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+            - name: Adding Known 
+              run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+            - name: Deploy with rsync
+              run: rsync -avz ./dist/ ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/var/www/rust-handler/
