--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,10 @@ jobs:
             - name: 🏗️ Build Website
               run: npm run build
 
-            - name: Install SSH Key
+            - name: Install SSH key
               uses: shimataro/ssh-key-action@v2
               with:
-                  key: ${{ secrets.SSH_KEY }}
-                  known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-            - name: Adding Known 
-              run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-            - name: Deploy with rsync
-              run: rsync -avz ./dist/ ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/var/www/rust-handler/
+                key: ${{ secrets.SSH_KEY }}
+                known_hosts: ${{ secrets.USERNAME }}
+                if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
+            - name: rsync over SSH
