--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
                 username: ${{ secrets.SSH_USERNAME }}
                 password: ${{ secrets.SSH_PASS }}
                 port: ${{ secrets.SSH_PORT }}
-                source: ./dist/rust-handler/
-                target: './var/www/rust-handler'
+                source: /dist/rust-handler/
+                target: './var/www/rust-handler2'
