--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             - name: 🏗️ Build Website
               run: npm run build
 
-            - name: 📝 Set OHV credentials
+            - name: 🤝 Deploy on Server 
             
               uses: appleboy/scp-action@v0.1.7
               with:
@@ -33,5 +33,5 @@ jobs:
                 username: ${{ secrets.SSH_USERNAME }}
                 password: ${{ secrets.SSH_PASS }}
                 port: ${{ secrets.SSH_PORT }}
-                source: /dist/rust-handler/
+                source: './dist/'
                 target: './var/www/rust-handler2'
