--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,12 @@ jobs:
                 port: ${{ secrets.SSH_PORT }}
                 source: './dist/'
                 target: './www/rust-hdandler'
+            - run: echo                                            _      
+                          _   _ _ __    _ __ ___   __ ___  __   __| | ___ 
+                          | | | | '_ \  | '_ ` _ \ / _` \ \/ /  / _` |/ _ \
+                          | |_| | | | | | | | | | | (_| |>  <  | (_| |  __/
+                          \__,_|_| |_| |_| |_| |_|\__,_/_/\_\  \__,_|\___|
+                          | | ___  _   ___   _____  ___                    
+                          | |/ _ \| | | \ \ / / _ \/ __|                   
+                          | | (_) | |_| |\ V /  __/\__ \                   
+                          |_|\___/ \__,_| \_/ \___||___/                   
