--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,4 @@ jobs:
                 port: ${{ secrets.SSH_PORT }}
                 source: './dist/'
                 target: './www/rust-hdandler'
-            - run: echo                                            _      
-                          _   _ _ __    _ __ ___   __ ___  __   __| | ___ 
-                          | | | | '_ \  | '_ ` _ \ / _` \ \/ /  / _` |/ _ \
-                          | |_| | | | | | | | | | | (_| |>  <  | (_| |  __/
-                          \__,_|_| |_| |_| |_| |_|\__,_/_/\_\  \__,_|\___|
-                          | | ___  _   ___   _____  ___                    
-                          | |/ _ \| | | \ \ / / _ \/ __|                   
-                          | | (_) | |_| |\ V /  __/\__ \                   
-                          |_|\___/ \__,_| \_/ \___||___/                   
+            - run: echo \n                                          _      \n            _   _ _ __    _ __ ___   __ ___  __   __| | ___ \n           | | | | '_ \  | '_ ` _ \ / _` \ \/ /  / _` |/ _ \\n           | |_| | | | | | | | | | | (_| |>  <  | (_| |  __/            \__,_|_| |_| |_| |_| |_|\__,_/_/\_\  \__,_|\___|\n           | | ___  _   ___   _____  ___                    \n           | |/ _ \| | | \ \ / / _ \/ __|                   \n           | | (_) | |_| |\ V /  __/\__ \                   \n           |_|\___/ \__,_| \_/ \___||___/                   
