--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
                 username: ${{ secrets.SSH_USERNAME }}
                 password: ${{ secrets.SSH_PASS }}
                 port: ${{ secrets.SSH_PORT }}
-                source: '/dist'
-                target: '/www/rust-handler/'
+                source: './dist/${{ github.repository }}'
+                target: './www/${{ github.repository }}'
