--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
               with:
                 host: ${{ secrets.SSH_HOST }}
                 username: ${{ secrets.SSH_USERNAME }}
-                password: ${{ secrets.SSH_PASS }}
+                key: ${{ secrets.SSH_KEY }}
                 port: ${{ secrets.SSH_PORT }}
                 source: './dist/*'
                 target: '../../../var/www/'
